--- a/src/main/resources/static/producten.html
+++ b/src/main/resources/static/producten.html
@@ -102,7 +102,7 @@
 		function postData(api, data){
 			var xhttp = new XMLHttpRequest();
 	  		xhttp.onreadystatechange = function() {
-	    			if (this.readyState == 4 && this.status == 202) {//should be 200 to print responsetext
+	    			if (this.readyState == 4 && this.status == 200) {
 	      				document.getElementById("resultaat").innerHTML = this.responseText;
 	    			} else if (this.readyState == 4 && this.status == 202) {
 	    				
@@ -129,7 +129,10 @@
         		<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link" href="producten.html">Producten</a>
+        		<a class="nav-link" href="producten.html">Producten toevoegen</a>
+      		</li>
+      		<li class="nav-item">
+        		<a class="nav-link" href="login.html">Log in</a>
       		</li>
       		<li class="nav-item">
         		<a class="nav-link disabled" href="#">Disabled</a>
@@ -139,40 +142,39 @@
 	</nav>
 
 	<div class="container">
-  		<h2>Voeg product toe</h2>
+  		<h2>Voeg product toe aan de database</h2>
   	<div id="resultaat"></div>
   	<form class="form-horizontal" id="productInputForm">
     	<div class="form-group">
       		<label class="control-label col-sm-2">Product:</label>
       		<div class="col-sm-10">
-        		<input id="naam" type="text" class="form-control" id="naam" placeholder="Productnaam"/>
+        		<input id="naam" type="text" class="form-control" id="naam" placeholder="Productnaam" required/>
       		</div>
    		</div>
     	<div class="form-group">
       		<label class="control-label col-sm-2">Hoeveelheid:</label>
       		<div class="col-sm-10">          
-        		<input id="hoeveelheid" type="number" class="form-control" placeholder="100"/>
+        		<input id="hoeveelheid" type="number" class="form-control" placeholder="100" required/>
         		Eenheid:
-        		<select class="selectpicker" id="eenheid">
+        		<select class="selectpicker" id="eenheid" required>
 				</select>
       		</div>
     	</div>
     	<div class="form-group">
       		<label class="control-label col-sm-2">Productgroep:</label>
       		<div class="col-sm-10">          
-        		<select class="selectpicker" id="productgroep">
+        		<select class="selectpicker" id="productgroep" required>
 				</select>
       		</div>
    		</div>
     	<div class="form-group">
       		<label class="control-label col-sm-2">Bron:</label>
       		<div class="col-sm-10">          
-    	    	<input id="bron" type="text" class="form-control"/>
+    	    	<input id="bron" type="text" class="form-control"/ required>
       		</div>
     	</div>
     	<div class="form-group" id="submitDiv">        
       		<div class="col-sm-offset-2 col-sm-10">
-        		<!-- <button type="submit" class="btn btn-default" onclick="productVersturen()">Voeg toe</button>-->
         		<button type="submit" class="btn btn-default" onclick="productVersturen()">Voeg toe</button>
       		</div>
     	</div>
