changed location of annotations

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 <title>Form</title>
-<script src="../js/cookies.js"></script>
-<script src="../js/postLogin.js"></script>
+<script src="./js/cookies.js"></script>
+<script src="./js/postLogin.js"></script>
 
 
 </head>
@@ -42,7 +42,7 @@
 		<div class="col-md-4">
 			<form>
 			 <div class="form-group">
-			    <label for="username">Gebruikersnaam</label>
+			    <label for="username">E-mailadres</label>
 			    <input type="text" class="form-control" id="username" placeholder="gebruikersnaam" required>
 			  </div>
 			  <div class="form-group">
@@ -57,7 +57,7 @@
 	<br>
 	<p>Heeft u nog geen account?</p>
 	<form action="registreer.html">
-		<input type="submit" class="btn btn-default" value="registreer">
+		<input type="submit" class="btn btn-default" value="Registreer">
 	</form>
 	</div>
 	</div>
