--- a/src/main/resources/static/producten.html
+++ b/src/main/resources/static/producten.html
@@ -116,9 +116,9 @@
       		</div>
    		</div>
     	<div class="form-group">
-      		<label class="control-label col-sm-2">Hoeveelheid:</label>
+      		<label class="control-label col-sm-2">Inhoud:</label>
       		<div class="col-sm-10">          
-        		<input id="hoeveelheid" type="number" class="form-control" placeholder="100" required/>
+        		<input id="inhoud" type="number" class="form-control" placeholder="100" required/>
         		Eenheid:
         		<select class="selectpicker" id="eenheid" required>
 				</select>
