--- a/src/main/resources/static/registreer.html
+++ b/src/main/resources/static/registreer.html
@@ -50,7 +50,7 @@
     	<div class="form-group">
       		<label class="control-label col-sm-2">Geboortedatum:</label>
       		<div class="col-sm-10">          
-      		   	<input id="geboortedatum" type="text" class="form-control" maxlength="10" placeholder="dd-mm-jjjj" required/>
+      		   	<input id="geboortedatumAsString" type="text" class="form-control" maxlength="10" placeholder="dd-mm-jjjj" required/>
     		</div>
    		</div>
     	<div class="form-group">
