--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<title>Form</title>
-<script src="./js/cookies.js"></script>
-<script src="./js/postLogin.js"></script>
+<script src="./js/objectVersturen.js"></script>
 
+<title>Form</title>
 
 </head>
 
@@ -29,7 +28,7 @@
         		<a class="nav-link" href="login.html">Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" href="#">Disabled</a>
+        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
@@ -40,16 +39,16 @@
   		<h2>Log in op uw account</h2>
 	<div class="row">
 		<div class="col-md-4">
-			<form>
+			<form id="login">
 			 <div class="form-group">
 			    <label for="username">E-mailadres</label>
-			    <input type="text" class="form-control" id="username" placeholder="gebruikersnaam" required>
+			    <input type="text" class="form-control" id="email" placeholder="email" required>
 			  </div>
 			  <div class="form-group">
 			    <label for="password">Wachtwoord</label>
-			    <input type="password" class="form-control" id="password" placeholder="wachtwoord" required>
+			    <input type="password" class="form-control" id="wachtwoord" placeholder="wachtwoord" required>
 			  </div>
-			  <input type="button" onclick="postLogin()" class="btn btn-default" value="Log in">
+			  <input type="button" onclick="gebruikerLogin()" class="btn btn-default" value="Log in">
 			</form>
 		</div>
 	</div>
