--- a/src/main/resources/static/producten.html
+++ b/src/main/resources/static/producten.html
@@ -100,7 +100,7 @@
         		<a class="nav-link" href="login.html">Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" href="#">Disabled</a>
+        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
