--- a/src/main/resources/static/registreer.html
+++ b/src/main/resources/static/registreer.html
@@ -32,12 +32,11 @@
         		<a class="nav-link" href="login.html">Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" href="#">Disabled</a>
+        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
 	</nav>
-
 	<div class="container">
   		<h2>Maak een account aan</h2>
   	<form class="form-horizontal" id="gebruikerInputFormulier">
