--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <script src="./js/accessRegulator.js"></script>
+    <script>
+		window.onload=function(){ beginFunctie();}
+		function beginFunctie(){
+	    	setLogboekNavBarAccess();
+		}
+	</script>
+    
   </head>
   <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
