--- a/src/main/resources/static/logboek.html
+++ b/src/main/resources/static/logboek.html
@@ -109,8 +109,8 @@
 	</nav>
 
 	<div class="container">
-  		<h2>Voeg product toe aan de database</h2>
-  	<form class="form-horizontal" id="productInputForm">
+  		<h2>Logboek</h2>
+<!--   	<form class="form-horizontal" id="productInputForm">
     	<div class="form-group">
       		<label class="control-label col-sm-2">Product:</label>
       		<div class="col-sm-10">
@@ -145,7 +145,7 @@
       		</div>
     	</div>
   </form>
-</div>
+</div>-->
 
 
 
