--- a/src/main/resources/static/logboekdag.html
+++ b/src/main/resources/static/logboekdag.html
@@ -59,7 +59,7 @@
 			 <div class="form-group">
 			    <label for="productSelectie">Zoek product</label>
 			    <input type="text" class="form-control" id="productInput" required>
-			    <input type="hidden" id="naam">
+			    <input type="hidden" id="product_id">
 			  </div>
 			  <div class="form-group">
 			    <label for="productSelectie">Hoeveelheid</label>
@@ -70,11 +70,40 @@
 			    <input type="text" class="form-control" id="eenheid" placeholder="GRAM" readonly>
 			  </div>
 			  
-			  <input type="button" onclick="" class="btn btn-default" value="Voeg toe">
+			  <input type="button" onclick="voegProductToeAanLogboekdag()" class="btn btn-default" value="Voeg toe">
 			</form>
 		</div>
+		<div class="col-md-4">
+			  <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+		</div>
 	</div>
-	<div>
+<div>
 
 
 <!-- Optional JavaScript -->
