--- a/src/main/resources/static/producten.html
+++ b/src/main/resources/static/producten.html
@@ -42,10 +42,10 @@
         		<a class="nav-link" href="producten.html">Producten toevoegen</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link" href="login.html">Log in</a>
+        		<a class="nav-link" href="login.html" id=logintab>Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
+        		<a class="nav-link disabled" id = "logboektab" onclick="logOut(); return true;" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
