made function to logout

--- a/src/main/resources/static/logboekdag.html
+++ b/src/main/resources/static/logboekdag.html
@@ -41,15 +41,14 @@
         		<a class="nav-link" href="producten.html">Producten toevoegen</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link" href="login.html" id=logintab>Log in</a>
+        		<a class="nav-link" href="login.html" onclick="logOut(); return true;" id=logintab>Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" id = "logboektab" onclick="logOut(); return true;" href="logboek.html">Logboek</a>
+        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
 	</nav>
-
 
 <div class="container">
   		<h2>Logboekdag</h2>
