--- a/src/main/resources/static/logboek.html
+++ b/src/main/resources/static/logboek.html
@@ -40,15 +40,15 @@
         		<a class="nav-link" href="producten.html">Producten toevoegen</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link" href="login.html" id=logintab>Log in</a>
+        		<a class="nav-link" href="login.html" onclick="logOut(); return true;" id=logintab>Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" id = "logboektab" onclick="logOut(); return true;" href="logboek.html">Logboek</a>
+        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
 	</nav>
-
+	
 	<div class="container">
   		<h2>Logboek</h2>
 		<div class="row">
