--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,6 +6,7 @@
 <script src="./js/objectVersturen.js"></script>
 <script src="./js/accessRegulator.js"></script>
 
+
 <script>
 	window.onload=function(){ beginFunctie();}
 	function beginFunctie(){
@@ -33,10 +34,10 @@
         		<a class="nav-link" href="producten.html">Producten toevoegen</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link" href="login.html" id=logintab>Log in</a>
+        		<a class="nav-link" href="login.html" onclick="logOut(); return true;" id=logintab>Log in</a>
       		</li>
       		<li class="nav-item">
-        		<a class="nav-link disabled" id = "logboektab" onclick="logOut(); return true;" href="logboek.html">Logboek</a>
+        		<a class="nav-link disabled" id = "logboektab" href="logboek.html">Logboek</a>
       		</li>
     	</ul>
   	</div>
