--- a/src/main/resources/static/logboekdag.html
+++ b/src/main/resources/static/logboekdag.html
@@ -18,6 +18,7 @@
 		window.onload=function(){ beginFunctie();}
 		function beginFunctie(){
 	    	setLogboekNavBarAccess();
+	    	laadTabelLogboekdag();
 		}
 				
 
