--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,9 +25,6 @@
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
     	<ul class="navbar-nav mr-auto">
-      		<li class="nav-item active">
-        		<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      		</li>
       		<li class="nav-item">
         		<a class="nav-link" href="producten.html">Producten toevoegen</a>
       		</li>
@@ -40,7 +37,10 @@
     	</ul>
   	</div>
 	</nav>
-
+		<div class="container">
+<br>
+<h2>Welkom bij de voedingsmeter</h2>
+</div>
 <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
