--- a/src/main/resources/static/logboekdag.html
+++ b/src/main/resources/static/logboekdag.html
@@ -20,7 +20,7 @@
 		window.onload=function(){ beginFunctie();}
 		function beginFunctie(){
 	    	setLogboekNavBarAccess();
-	    	laadTabelLogboekdag();
+	    	laadTabelLogboekdag("");
 		}
 				
 
@@ -37,9 +37,6 @@
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
     	<ul class="navbar-nav mr-auto">
-      		<li class="nav-item active">
-        		<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      		</li>
       		<li class="nav-item">
         		<a class="nav-link" href="producten.html">Producten toevoegen</a>
       		</li>
@@ -52,7 +49,6 @@
     	</ul>
   	</div>
 	</nav>
-
 <div class="container">
   		<h2 id=logboekdagheader>Logboekdag</h2>
 	<div class="row">
