--- a/src/main/resources/static/producten.html
+++ b/src/main/resources/static/producten.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="voedingsmeterStyle.css">
     <script src="./js/objectVersturen.js"></script>
     <script src="./js/accessRegulator.js"></script>
     <script src="./js/createDropdown.js"></script>
@@ -55,13 +56,13 @@
   	<form class="form-horizontal" id="productInputForm">
     	<div class="form-group">
     	<table id="addProductTable">
-    	<tr><td><label class="control-label col-sm-2">Product:</label></td><td><input id="naam" type="text" class="form-control" id="naam" placeholder="Productnaam" required/></td></tr>
-    	<tr><td><label class="control-label col-sm-2">Inhoud:</label></td><td><input id="inhoud" type="number" class="form-control" placeholder="100" required/></td></tr>
-    	<tr><td><label class="control-label col-sm-2">Eenheid:</label></td><td><select class="selectpicker" id="eenheid" required>
+    	<tr><td><label class="control-label col-sm-2">Product:</label></td><td></td><td><input id="naam" type="text" class="form-control" id="naam" placeholder="Productnaam" required/></td></tr>
+    	<tr><td><label class="control-label col-sm-2">Inhoud:</label></td><td></td><td><input id="inhoud" type="number" class="form-control" placeholder="100" required/></td></tr>
+    	<tr><td><label class="control-label col-sm-2">Eenheid:</label></td><td></td><td><select class="selectpicker" id="eenheid" required>
 				</select></td></tr>
-    	<tr><td><label class="control-label col-sm-2">Productgroep:</label></td><td><select class="selectpicker" id="productgroep" required/>
+    	<tr><td><label class="control-label col-sm-2">Productgroep:</label></td><td></td><td><select class="selectpicker" id="productgroep" required/>
 				</select></td></tr>
-		<tr><td><label class="control-label col-sm-2">Bron:</label></td><td><input id="bron" type="text" class="form-control" required/></td></tr>
+		<tr><td><label class="control-label col-sm-2">Bron:</label></td><td></td><td><input id="bron" type="text" class="form-control" required/></td></tr>
 		<tr><td></td><td><button type="submit" class="btn btn-default" onclick="productVersturen()">Voeg toe</button></td></tr>
 		
     	</table>
